# unox

./: CHANGELOG.md  HPC_job_submit.sh  README.md  TROPESS_reanalysis_mon_emi_nox_anth_2021.nc  US_evaluate_outputs.ipynb  domain_design.ipynb  environment.yml  example_code.ipynb  insitu_comparison.ipynb  packagelist.txt  packagelist_unox1.txt  phase_1_evaluate.ipynb  pyproject.toml  test_unet.py  test_unet.sh
data/: README.md  concatenate.py  download_era5.py  download_era5.sh  era5loop.sh  inputfiles.py  renamefiles.sh  save_data.py  save_data.sh
datafiles/: README.md  concatenate.py  download_era5.py  download_era5.sh  era5loop.sh  inputfiles.py  lats.npy  lons.npy  nox_2019_t106_US.nc  renamefiles.sh
docs/: Makefile  example.ipynb
model/: core_new.py  core_old.py
model/.ipynb_checkpoints/: core-checkpoint.py
src/unox/: data.py  plot_format.py  plotting.py  unox.py
tests/: lats_TROPESS_reanalysis_mon_emi_nox_anth_2021.npy  lons_TROPESS_reanalysis_mon_emi_nox_anth_2021.npy  test_data.py  test_unox.py
unox/: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
unox/docs/: conf.py  example.ipynb  make.bat
unox/src/unox/: __init__.py  plotting.py  unox.py
unox/tests/: test_unox.py
