[tool.poetry]
name = "unox"
version = "0.1.0"
description = "Use machine learning to make NOX predictions"
authors = ["Mikhail Schee"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
matplotlib = ">=3.4.3"
tensorflow = "2.9.2"
scipy = ">=1.8.1"
xarray = ">=2022.11.0"
proplot = ">=0.9.7"
cartopy = ">=0.21.1"
basemap = "^1.4.1"
netcdf4 = ">=1.6.2"
pandas = "<2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
jupyter = "^1.1.1"
myst-nb = "^1.2.0"
sphinx-autoapi = "^3.6.0"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
